<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title_buttons">My Nanodegree Apps!</string>
    <string name="button_spotify">Spotify Streamer</string>
    <string name="button_scores">Scores App</string>
    <string name="button_library">Library App</string>
    <string name="button_build">Build it Bigger</string>
    <string name="button_reader">XYZ Reader</string>
    <string name="button_capstone">Capstone: My Own App</string>
</resources>
