<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.com.beyond_paper.myappportfolio.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:text="My Nanodegree Apps!"

        />
    <Button
        android:id="@+id/button_spotify"
        android:background="@color/button_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:text="@string/button_spotify"
        android:onClick="sendMessage" />
    <Button
        android:id="@+id/button_scores"
        android:background="@color/button_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:text="@string/button_scores"
        android:onClick="sendMessage" />
    <Button
        android:id="@+id/button_library"
        android:background="@color/button_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:text="@string/button_library"
        android:onClick="sendMessage" />
    <Button
        android:id="@+id/button_build"
        android:background="@color/button_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:text="@string/button_build"
        android:onClick="sendMessage" />
    <Button
        android:id="@+id/button_reader"
        android:background="@color/button_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:text="@string/button_reader"
        android:onClick="sendMessage" />
    <Button
        android:id="@+id/button_capstone"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_capstone"
        android:onClick="sendMessage" />
</LinearLayout>
